<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Kardex_Robot_Status" Id="{cb8bcd26-255b-4dbe-9e0c-fab2c078745f}">
    <Declaration><![CDATA[TYPE ST_Kardex_Robot_Status :
STRUCT
(*-----=== Byte 01 ===-----*)
	bCommandEnable			:BIT;				// 01.1	During automatic operation
	bSystemReady			:BIT;				// 01.2	Preparation completed
	bProgRun				:BIT;				// 01.3	Program running
	bPaused					:BIT;				// 01.4	Program being interrupted
	bHeld					:BIT;				// 01.5	During temporary stop
	bFault					:BIT;				// 01.6	Alarm
	bHomePos				:BIT;				// 01.7	Home position
	bPendant				:BIT;				// 01.8	Teach pendant enabled

(*-----=== Byte 02 ===-----*)
	bBatteryVoltageDrop		:BIT;				// 02.1	Battery voltage drop
	bBusy					:BIT;				// 02.1	During operation
	nAckProgNumber			:BYTE;
//	bAckSNO1				:BIT;				// 02.1	Selected program number
//	bAckSNO2				:BIT;				// 02.2	Selected program number
//	bAckSNO3				:BIT;				// 02.3	Selected program number
//	bAckSNO4				:BIT;				// 02.4	Selected program number
//	bAckSNO5				:BIT;				// 02.5	Selected program number
//	bAckSNO6				:BIT;				// 02.6	Selected program number

(*-----=== Byte 03 ===-----*)
//	bAckSNO7				:BIT;				// 03.1	Selected program number
//	bAckSNO8				:BIT;				// 03.2	Selected program number
	bSnAck					:BIT;				// 03.3	Response signal to PNS
	{attribute 'hide'}
	_reserved_03_04			:BIT;
	bProgramEnd				:BIT;				// 03.5	Robot aktuális programot befejezte
	bProgramRun				:BIT;				// 03.6	Robot aktuális program futásban.
	bAlarm					:BIT;				// 03.7	Robot kűldi amikor hiba van
	bServiceRun				:BIT;				// 03.8 Szerviz pozícióban a robot, szelep vezérlés mehet.
	
(*-----=== Byte 04 ===-----*)
	bGRP_1_2_Open			:BIT;				// 04.1 Megfogó 1&2 nyitva
	bGRP_1_2_Closed			:BIT;				// 04.2 Megfogó 1&2 zárva
	bGRP_3_4_Open			:BIT;				// 04.3 Megfogó 3&4 nyitva
	bGRP_3_4_Closed			:BIT;				// 04.4 Megfogó 3&4 zárva
	bPartPresent			:BIT;				// 04.5 Paletta figyelő/bemérő szenzor
	{attribute 'hide'}
	_reserved_04_06			:BIT;				
	{attribute 'hide'}
	_reserved_04_07			:BIT;
	{attribute 'hide'}
	_reserved_04_08			:BIT;
	
(*-----=== Byte 05 ===-----*)
	bKardex_Set				:BIT;				// 05.1	Robot kardex-be menne SET
	bMir_1_Set				:BIT;				// 05.2	Robot Mir-1-be menne SET
	bMir_2_Set				:BIT;				// 05.3	Robot Mir-2-be menne SET
	bPuffer_Set				:BIT;				// 05.4	Robot pufferbe menne SET
	bStrip_1_Set			:BIT;				// 05.5	Robot szalag-1-be menne SET
	bStrip_2_Set			:BIT;				// 05.6	Robot szalag-2-be menne SET
	bStrip_3_Set			:BIT;				// 05.7	Robot szalag-3-be menne SET	
	{attribute 'hide'}
	_reserved_05_08			:BIT;
	
(*-----=== Byte 06 ===-----*)
	{attribute 'hide'}
	_reserved_06			:BYTE;				
	
(*-----=== Byte 07 ===-----*)
	bNotCorrectPrg					:BIT;		// 07.1	Nem megfelelő mozgási program SET
	bNotProductOnRobot				:BIT;		// 07.2	Mozgási program nem hajtható végre, mert a robotnál nincs termék SET
	bProductOnRobot					:BIT;		// 07.3	Mozgási program nem hajtható végre, mert a robotnál termék van SET
	bGripperOpenError				:BIT;		// 07.4	Megfogó nyitási hiba SET
	bGripperCloseError				:BIT;		// 07.5 Megfogó zárási hiba SET
	bPartPresentError				:BIT;		// 07.6 Paletta jelenlét hiba SET
	bNotCorrectKardexFloor			:BIT;		// 07.7 Nem megfelelő kardex polc SET
	bNotCorrectKardexJig			:BIT;		// 07.8 Nem megfelelő kardex üllék SET

(*-----=== Byte 08 ===-----*)
	bNotCorrectMir				:BIT;			// 08.1	Nem megfelelő MIR üllék SET
	bNotCorrectPuffer			:BIT;			// 08.2 Nem megfelelő puffer üllék SET
	{attribute 'hide'}
	_reserved_08_03				:BIT;
	{attribute 'hide'}
	_reserved_08_04				:BIT;
	{attribute 'hide'}
	_reserved_08_05				:BIT;
	{attribute 'hide'}
	_reserved_08_06				:BIT;
	{attribute 'hide'}
	_reserved_08_07				:BIT;
	{attribute 'hide'}
	_reserved_08_08				:BIT;
	
(*-----=== Byte 09 ===-----*)
	bZone_1_Kardex			:BIT;				// 09.1	Robot bent a területen. - Kardex
	bZone_2_Mir1			:BIT;				// 09.2	Robot bent a területen. - Mir1
	bZone_3_Mir2			:BIT;				// 09.3	Robot bent a területen. - Mir2
	bZone_4_Puffer			:BIT;				// 09.4	Robot bent a területen. - Puffer
	bZone_5_Strip			:BIT;				// 09.5	Robot bent a területen. - Szalag
	bZone_6_Trans			:BIT;				// 09.6	Robot bent a területen. - Átmozgási terület
	{attribute 'hide'}
	_reserved_09_07			:BIT;		
	{attribute 'hide'}
	_reserved_09_08			:BIT;	
	
(*-----=== Byte 09 ===-----*)
	bRobotInStrip_1			:BIT;				// 10.1	Robot bent a szalag-1-ben.
	bRobotInStrip_2			:BIT;				// 10.2	Robot bent a szalag-2-ben.
	bRobotInStrip_3			:BIT;				// 10.3	Robot bent a szalag-3-ban.
	{attribute 'hide'}
	_reserved_10_04			:BIT;	
	{attribute 'hide'}
	_reserved_10_05			:BIT;		
	{attribute 'hide'}
	_reserved_10_06			:BIT;	
	{attribute 'hide'}
	_reserved_10_07			:BIT;		
	{attribute 'hide'}
	_reserved_10_08			:BIT;	

(*-----=== Byte 11 - 12 ===-----*)
	{attribute 'hide'}
	_reserved_10_12			:ARRAY[11..12] OF BYTE;				
	
(*-----=== Byte 13 ===-----*)
	nProgramNumber			:BYTE;				// 13. Aktuális program szám Robotban,
	
(*-----=== Byte 14 ===-----*)
	nPointNumber			:BYTE;				// 14. Aktuális pont szám
	
(*-----=== Byte 15 ===-----*)
	bKeyAuto				:BIT;				// 15.1	Robot automata-remote üzemmódban
	bKeyManualT1			:BIT;				// 15.2	Robot kézi üzemmódban - 250 mm/sec max sebesség
	bKeyManualT2			:BIT;				// 15.3	Robot kézi üzemmódban - 100 % sebesség
	bSimInput				:BIT;				// 15.4	Szimulálva (force-olva) Input
	bSimOutput				:BIT;				// 15.5	Szimulálva (force-olva) Output
	{attribute 'hide'}
	_reserved_15_06			:BIT;
	{attribute 'hide'}
	_reserved_15_07			:BIT;		
	{attribute 'hide'}
	_reserved_15_08			:BIT;	
	
(*-----=== Byte 16 ===-----*)
	bControllerEmyStop		:BIT;				// 16.1	Robot kontroller vészgomb
	bTeachPendantEmyStop	:BIT;				// 16.2	Teach Pendant vészgomb
	bDeadman				:BIT;				// 16.3	TP engedélyező gomb
	bFence					:BIT;				// 16.4	Fence
	bRot					:BIT;				// 16.5	Robot olyan területre akar mozogni ahova mechanikusan nem ér el
	bHbk					:BIT;				// 16.6	Robot felütközött, védelem
	bEmyStopExternal		:BIT;				// 16.7	Külső vészgomb (gépi)
	bNoPneumatics			:BIT;				// 16.8	A karon lévő pneumatika nem érzékel levegőt
	
(*-----=== Byte 17 ===-----*)
	bBeltBreak				:BIT;				// 17.1	Robot kontroller vészgomb
	bFalm					:BIT;				// 17.2	Ventilátor hiba
	bServoOff				:BIT;				// 17.3	Kivűlről tiltott SERVO engedélyezés
	bIMSTP					:BIT;				// 17.4	Engedélyező jel vissza adása
	bBEKHLD					:BIT;				// 17.5	
	bUSRALM					:BIT;				// 17.6	
	bSRVDSCNCT				:BIT;				// 17.7	
	bNTED					:BIT;				// 17.8			
	
(*-----=== Byte 18 - 64 ===-----*)
	{attribute 'hide'}
	_reserved_18_64			:ARRAY[18..64] OF BYTE;		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>